@@ -76,6 +76,8 @@ GtkWidget *	panel_error_dialog	(const char *format, ...) G_GNUC_PRINTF (1, 2);
 
 gboolean	is_ext			(const char *file,
 					 const char *ext);
+int		strcasecmp_no_locale	(const char *s1,
+					 const char *s2);
 
 END_GNOME_DECLS
 
