@@ -1,3 +1,11 @@
+Sat Oct 14 14:17:49 2000  George Lebl <jirka@5z.com>
+
+	* panel_config.c, applet-widget.c, gwmthumbnail.c, panel-util.[ch],
+	  panel.c, status-docklet.c:  Random cleanup related to some
+	  -pedantic -ansi, also added a no_locale version of strcasecmp
+	  and use it appropriately.  Also "localhost.localdomain" is also
+	  a local host.
+
 Sat Oct 14 14:50:18 2000  George Lebl <jirka@5z.com>
 
 	* main.c: cleanups, remove unused extern
